# call2-for-syn

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: audit_at_midnight.yml  audit_on_push.yml  auto-approve_dependabot.yml  ci.yml  rust_auto_format.yml
src/: lib.rs
tests/: meta_constants_.rs  meta_version_numbers.rs
