[package]
name = "call2-for-syn"
version = "2.0.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Apply parser functions to proc-macro2 token streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/call2-for-syn"
homepage = "https://github.com/Tamschi/call2-for-syn/tree/v2.0.3"
documentation = "https://docs.rs/call2-for-syn/2.0.3"
keywords = ["proc-macro2", "syn"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/call2-for-syn" }
is-it-maintained-open-issues = { repository = "Tamschi/call2-for-syn" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
proc-macro2 = "1.0.8"
rustversion = "1.0.4"
syn = { version = "1.0.14", default-features = false, features = ["parsing"] }

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
quote = "1.0.2"
unquote = "0.0.6"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"] # No target differences.
